GNOME Bugzilla – Bug 754172
can't connect to wifi: connect button is greyed out
Last modified: 2015-09-02 11:48:58 UTC
Description of problem:▾ I am trying to connect to wpa2 wifi using my username and password, after typing down the password, the connect button stays gray and I can't proceed. The input box is set to "Ask for password every time". Version-Release number of selected component (if applicable):▾ network-manager-applet-1.0.4-2.fc24.x86_64 NetworkManager-1.0.4-2.fc24.x86_64 NetworkManager-vpnc-1.0.2-2.fc23.x86_64 NetworkManager-team-1.0.4-2.fc24.x86_64 NetworkManager-openvpn-1.0.2-3.fc23.x86_64 NetworkManager-openvpn-gnome-1.0.2-3.fc23.x86_64 NetworkManager-glib-1.0.4-2.fc24.x86_64 NetworkManager-pptp-1.1.0-2.20150428git695d4f2.fc23.x86_64 NetworkManager-vpnc-gnome-1.0.2-2.fc23.x86_64 NetworkManager-openconnect-1.0.2-2.fc23.x86_64 NetworkManager-libnm-1.0.4-2.fc24.x86_64 NetworkManager-wifi-1.0.4-2.fc24.x86_64 NetworkManager-l2tp-0.9.8.7-4.fc23.x86_64 Distribution issue (didn't get any love therefore I'm creating this one): https://bugzilla.redhat.com/show_bug.cgi?id=1247885
Are you sure that you entered all the necessary fields correctly? Note that a WPA PSK password must be of length 8 to 63 ... If you run nm-connection-editor in the terminal, it should print an error message of why the settings are invalid (and the button is grayed out).
Created attachment 310426 [details] [review] [PATCH] wifi-dialog: add tooltip to password dialog to help with disabled "Connect" button Applies to master (c8e6d84cd94e52c139b9faa51b9c4a3d83de69a7)
(In reply to ttomecek from comment #0) > Description of problem:▾ > > I am trying to connect to wpa2 wifi using my username and password, after > typing down the password, the connect button stays gray and I can't proceed. > The input box is set to "Ask for password every time". If does it go to edit the connection for which you see the issue in nm-connection-editor? Is the "Save" button initially disabled? Can you modify the connection so that the "Save" button becomes active? Maybe the "No CA certificates required" checkbox is the culprit? After saving the connection, does the issue still persist?
(In reply to Thomas Haller from comment #2) > Created attachment 310426 [details] [review] [review] > [PATCH] wifi-dialog: add tooltip to password dialog to help with disabled > "Connect" button > > Applies to master (c8e6d84cd94e52c139b9faa51b9c4a3d83de69a7) The patch seems fine to me. I can see the tooltip. However on master I do not experience the problem, because the password dialog that appear contains more widgets (similar to the editor) including "No CA certificate is required". Thus the user can modify fields and "Connect" button becomes sensitive.
(In reply to Jiri Klimes from comment #4) > (In reply to Thomas Haller from comment #2) > > Created attachment 310426 [details] [review] [review] [review] > > [PATCH] wifi-dialog: add tooltip to password dialog to help with disabled > > "Connect" button > > > > Applies to master (c8e6d84cd94e52c139b9faa51b9c4a3d83de69a7) > > The patch seems fine to me. I can see the tooltip. Thanks. > However on master I do not experience the problem, because the password > dialog that appear contains more widgets (similar to the editor) including > "No CA certificate is required". Thus the user can modify fields and > "Connect" button becomes sensitive. I also happens for me on master. Maybe you didn't have a matching connection, and nm-applet did AddAndActivate()? merged patch from comment 2 upstream: master: https://git.gnome.org/browse/network-manager-applet/commit/?id=53e801f362fefa52d0f538f530be91c8140e5e7b nma-1-0: https://git.gnome.org/browse/network-manager-applet/commit/?id=74759ef83d4db81156abe33b4e500fb0fa59e8d3 With this, it should be more clear to the user that the connection is invalid and that he must edit the connection first. That is not really solvable in a better way, because nm-applet is a bit more strict about whether the connection is valid. So, in the case of the reporter, the connection was valid from NetworkManagers point of view, but not from nm-applets. This was not (really) a bug, but stems from the fact that nm-applet requires the user to check the "No CA certificate required" checkbox, in order to prevent an unintentional connect without Certificate. That is intended, but leads to the strange behavior of this BZ.